# ffx-magic-re

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  PROVENANCE.md  PUBLIC_UPSTREAM.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: reproducibility.md  research-scope.md  status.md
examples/: sync_manifest.json
scripts/: sync_from_private.py  verify_public_tree.py
src/ffx_magic_re/: __init__.py  guard.py  sync.py
src/ppp_disassembler/: __init__.py  c2_b_cli.py  c2_b_writer.py  c2_color_codec.py  c2_effect_overlay.py  c2_scale_codec.py  core.py  decoder.py  layer_c_resource.py  layer_c_slot.py  opcodes.py  operands.py  payload_map.py  render.py  stream.py  useful_ppp_candidates.py  useful_ppp_writer.py  wd3_blob_writer.py  wd3_writer.py  yonishi_dispatch.py  yonishi_manifest.py  yonishi_par.py
src/ppp_disassembler/tests/: test_c2_b_writer.py  test_c2_color_codec.py  test_c2_effect_overlay.py  test_c2_scale_codec.py
tests/: conftest.py  test_core.py  test_guard.py  test_opcodes.py  test_operands.py  test_payload_map.py  test_render.py  test_stream.py  test_sync.py  test_useful_ppp_candidates.py  test_useful_ppp_writer.py  test_verify_cli.py  test_wd3_writer.py
