[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ffx-magic-re"
version = "0.4.0"
description = "Public magic data research repository with leak guard"
requires-python = ">=3.12"
license = "MIT"

[project.optional-dependencies]
dev = ["pytest>=8", "build>=1"]

[project.scripts]
verify-public-tree = "ffx_magic_re.guard:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.setuptools.package-dir]
"" = "src"
